fix: header iOS overlap

--- a/client/seeFit/src/app/modules/platform/interaction/interaction.component.scss
+++ b/client/seeFit/src/app/modules/platform/interaction/interaction.component.scss
@@ -7,8 +7,6 @@
   margin-top: 27px;
   margin-right: 8px;
 
-  ion-searchbar {}
-
   ion-button {
     min-height: 36px;
   }
