--- a/client/seeFit/src/app/modules/platform/platform.component.scss
+++ b/client/seeFit/src/app/modules/platform/platform.component.scss
@@ -92,5 +92,5 @@ ion-accordion {
 }
 
 .ion-page {
-  margin-top: 64px;
+  margin-top: 26px;
 }
